# open-web-search

./: .gitignore  HANDOFF.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/design/: adaptive_intelligence.md  agentic_search_vision.md  api_experience.md  usage_scenarios.md
docs/reports/: analysis_api_server_paradigm.md  cost_analysis.md  cot_scrtipts.md  deep_stress_test_report.json  design_web_walker.md  detailed_evaluation_report.md  diversity_analysis_report.md  ecosystem_report.md  ecosystem_verification_plan.md  simulation_report.md  site_blocking_analysis.md  usage_scenarios_analysis.md  verification_plan.md
examples/: basic_search.py  langchain_agent.py  quickstart.py  research_agent.py  research_agent_integrated.py  research_agent_walker.py  verify_searxng.py
legacy/: system_critique.md
open_web_search/: __init__.py  cli.py  config.py
open_web_search/core/: loop.py  pipeline.py  planner.py  synthesizer.py
open_web_search/crawling/: analyzer.py  crawler.py
open_web_search/engines/: base.py  composite.py  ddg.py  searxng.py
open_web_search/integrations/: langchain.py
open_web_search/observability/: logging.py
open_web_search/readers/: base.py  browser.py  pdf_reader.py  v2_reader.py  (+1 more)
tests/: benchmark_vs_tavily.py  conftest.py  debug_fallback.py  debug_stealth.py  debug_zero_evidence.py  deep_e2e_benchmark.py  simulate_enterprise_env.py  test_basic.py  test_engines_connection.py  test_lite_refiner.py  test_planner.py  test_server_api.py  verify_enterprise_mode.py  verify_modes.py  verify_resilience_logic.py
(+33 files in other folders)
