[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-web-search"
version = "1.0.0"
description = "Open-Web-Search: The Standard Open Source Alternative to Tavily"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Antigravity", email = "antigravity@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "trafilatura>=1.12.0",
    "diskcache>=5.6.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",  # For retries
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "openai>=1.0.0",   # For LLM interface
    "sentence-transformers>=2.2.0", # For semantic refining
    "numpy",
    "curl_cffi>=0.7.0", # For TLS/JA3 impersonation
    "selectolax>=0.3.21" # For ultra-fast DOM parsing
]

[project.scripts]
open-web-search = "open_web_search.cli:main"
ows = "open_web_search.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "langchain-core", # For integration testing
    "langchain"
]

[tool.hatch.build.targets.wheel]
packages = ["open_web_search"]

[tool.hatch.build.targets.sdist]
include = [
    "open_web_search",
    "README.md",
    "LICENSE",
    "requirements.txt"
]
exclude = [
    ".env",
    "tests",
    "simulations",
    "examples",
    "*.log",
    "*.txt",
    "*.json",
    "*.md",  # Exclude other MDs
    ".gitignore",
    ".idea",
    ".linker_cache"
]
